--- a/html/src/vr.scss
+++ b/html/src/vr.scss
@@ -178,13 +178,8 @@ button {
     font-family: 'Noto Sans JP', 'Noto Sans KR', 'Noto Sans TC', 'Noto Sans SC',
         'Meiryo UI', 'Malgun Gothic', 'Segoe UI', sans-serif;
     line-height: normal;
-    text-shadow:
-        #000 0px 0px 3px,
-        #000 0px 0px 3px,
-        #000 0px 0px 3px,
-        #000 0px 0px 3px,
-        #000 0px 0px 3px,
-        #000 0px 0px 3px;
+    text-shadow: #000 0px 0px 3px, #000 0px 0px 3px, #000 0px 0px 3px,
+        #000 0px 0px 3px, #000 0px 0px 3px, #000 0px 0px 3px;
 }
 
 .x-app {
